[package]
name = "libxdrfile-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1"

[dependencies]
cc = { version = "1.0.79", features = ["parallel"] }
libc = "0.2.147"
